--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .mainContainer {
-  height: 100vh;
-  max-height: 100vh;
+  /* height: 100vh; */
+  height: 1024px;
+  /* max-height: 100vh; */
+  width: 100%;
   border-radius: 16px;
   display: flex;
   border: 1px solid inset #e9ecf2;
+  overflow-y: hidden;
 }
 
 .loginContainer {
@@ -11,7 +14,7 @@
   width: 100%;
   overflow: hidden;
   height: 100%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -170,7 +173,7 @@
 .loginBackground {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 1024px;
   display: flex;
   justify-content: center;
   align-items: center;
