--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 .loginContainer {
   width: 1440px;
   border-radius: 25px;
-  border: 3px solid #e9ecf2;
+  border: 3px solid #ffffff;
   display: flex;
   overflow: hidden;
   align-items: center;
